--- a/homework/Day_001_HW.ipynb
+++ b/homework/Day_001_HW.ipynb
@@ -141,6 +141,14 @@
     "\n",
     "#作業三\n",
     "def mean_squared_error(y, y_hat):\n",
+    "    \"\"\"\n",
+    "    計算 MSE\n",
+    "    Args:\n",
+    "        - y: 實際值\n",
+    "        - y_hat: 預測值\n",
+    "    Return:\n",
+    "        - mse: MSE\n",
+    "    \"\"\"\n",
     "    mse = MSE = sum((y - y_hat) ** 2) / len(y)\n",
     "    return mse\n",
     "\n",
